--- a/index.html
+++ b/index.html
@@ -7,9 +7,23 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    IMG
+    <img src="tiger-jpg.jpg" alt="">
+    <h2>Porque estou no se liga?</h2>]
+    <p>cksdjhfkjdsjdsg;kjsnd;jkfsd;ksdkbvd</p>
+    <h2>O que fazer para que isso não ocorra mais?</h2>
+    <p>gdljflhgklhfljdjglfjgf</p>
+    <img src="" alt="">
+
+    <h2>lista de comprometimentos com os estudos </h2>
+    <ul>
+        
+
+
+    </ul>
+
+
+
 </body>
 </html>
 
 
-<img src="tiger-jpg.jpg" alt="" srcset="">
