--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <h2>lista de comprometimentos com os estudos </h2>
     <ul>
-        
-
-
+      <li>Estudar mais </li>
+      <li>não faltar as aulas </li>  
+      <li>focar mais</li>
     </ul>
-
+<a href="https://seliga.educacao.mg.gov.br/">CLIQUE AQUI NO LINK DO SE LIGA</a>
 
 
 </body>
